--- a/manga_odd.tex
+++ b/manga_odd.tex
@@ -253,8 +253,7 @@ The porewater salinity can be monitored with arbitrarily fine temporal resolutio
 All output files can be visualized and analyzed externally.
 
 \subsection*{Details}
-\addcontentsline{toc}{subsection}{Details}  
-\subsubsection{Initialization}
+\subsection{Initialization}
 
 \begin{enumerate}
 \item Established trees have set initial allometric measures and species-specific parameters.
